tests/ui/span/issue-43927-non-ADT-derive.stderr
error: `derive` attribute cannot be used at crate level
  --> $DIR/issue-43927-non-ADT-derive.rs:1:1
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct DerivedOn;
   |        --------- the inner attribute doesn't annotate this struct
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
LL + #[derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |

error: aborting due to 1 previous error

